# Final-Lesson-Implementation

./: AI-Industry-Complete-Lesson-Coverage-Map.md  AI-Industry-Curriculum - Copy.md  AI-Industry-Detailed-Lessons.md  AI-Industry-Detailed-Outline.md  AI-Industry-Roadmap-and-Projects.md  SupportOps-AI-Copilot-Production-Implementation-Guide.md  SupportOps-AI-Copilot-Technical-Implementation-Guide.md  api-integration-system-interview-prep.md  deep-research-report.md
AI-Copilot/: .dockerignore  .env.example  Dockerfile.api  docker-compose.yml  pyproject.toml  requirements.txt
CardGameInterviewPrep/: 00-complete-guide.md  01-decoded-interview.md  02-domain-and-questions.md  03-design-playbook.md  04-game-catalog.md  05-interview-day-playbook.md  06-practice-plan.md  07-oop-and-csharp-fundamentals.md  08-book-cracking-the-coding-interview.md  09-book-programming-pearls.md  10-mind-map-and-mental-code.md  11-part3-mutation-mega-drill.md  README.md
Frends/: Frends_8_Hour_Interview_Preparation.md  Frends_8_Hour_Interview_Preparation_REVISED.md  Frends_Interview_QA_Lesson.md  Frends_Interview_Reference_Archive.md  Frends_ONE_Interview_Cheatsheet.md
generate-ai-industry-lesson/: SKILL.md
labs/model-behavior-lab/: pyproject.toml
labs/model-behavior-lab/model_behavior_lab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
labs/model-behavior-lab/model_lab/: __init__.py  baseline.py  schemas.py  support_cases.jsonl  tokenization.py
labs/model-behavior-lab/tests/: test_baseline.py  test_schemas.py  test_tokenization.py
mocks/: mock1.md  (+1 more)
(+97 files in other folders)
