# pyproject.toml
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "model-behavior-lab"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "opentelemetry-api>=1.27,<2",
  "opentelemetry-sdk>=1.27,<2",
  "pydantic>=2.7,<3",
  "torch>=2,<3",
  "transformers>=4.57,<6",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<10",
]

[project.scripts]
model-lab = "model_lab.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["model_lab*"]